--- a/database/graphs.ipynb
+++ b/database/graphs.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Solely for producing and recording the graphs we want to show the client.\n",
+    "Shouldn't have any functions.\"\"\"\n",
+    "\n",
     "%matplotlib widget\n"
    ]
   }
