--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "from pandas.api.types import is_datetime64_any_dtype\n",
     "import numpy as np\n",
-    "import time_series_correlation\n",
+    "# import time_series_correlation\n",
     "#Open charts in new windows\n",
     "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
